# naver-blog-image-downloader

./: .envExample  .gitignore  AGENTS.md  CLAUDE.md  README.md  data_models.py  downloader.py  naver_blog_image_downloader.py  pyproject.toml  requirements.txt
.github/: ollama-models.json
.github/actions/create-release/: action.yml
.github/actions/generate-release-notes/: action.yml
.github/actions/select-ollama-model/: action.yml
.github/workflows/: backend-cd.yml  backend-ci.yml  deploy-pages.yml  mobile-android-promote.yml  mobile-cd.yml  mobile-ci.yml  mobile-deploy-pages.yml  pr-ai-review.yml  pr-auto-fix-reviews.yml  pr-ollama-review.yml  web-cd.yml  web-ci.yml
apps/backend/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
apps/backend/src/: app.py  data_models.py  response_builder.py
apps/backend/tests/: api.http
apps/mobile/: .gitignore  CLAUDE.md  README.md  pubspec.yaml
apps/mobile/.maestro/: screenshot_matrix.yaml  take_screenshot.yaml
apps/mobile/android/: .gitignore  Gemfile  key.properties.template
apps/mobile/docs/: android-release.md
apps/mobile/lib/: main.dart
apps/mobile/scripts/: generate_maestro_matrix.dart  run_android_screenshot_matrix.sh  run_ios_screenshot_matrix.sh  screenshot_common.sh  screenshot_matrix.json  sync_scenarios.dart
apps/web/: .env.example  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
apps/web/public/: manifest.webmanifest
docs/: README_en-US.md  README_zh-TW.md  index.html
docs/mobile/: index.html
docs/web/: index.html
openspec/: config.yaml
(+206 files in other folders)
