[project]
name = "naver-blog-image-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[tool.ruff]
# 設定目標 Python 版本
target-version = "py310"

# 每行最大字元數
line-length = 88

[tool.ruff.lint]
# 啟用的規則集
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import 排序)
    "UP",  # pyupgrade
]

# 忽略的規則
ignore = []

[tool.ruff.lint.isort]
# isort 設定
known-first-party = ["data_models", "helper"]
# 強制單行 import
force-single-line = false
# 每個 import 區塊之間的空行數
lines-after-imports = 2
